style.css
:root {
    --header-footer-color: #2f2d2b;
    --main-color: #272322;
    --project-card-width: 350px;
    --project-card-height: 350px;
    --highlight-color: #453e3c;
    color: whitesmoke;
}

a {
    color: white;
    text-decoration: none;
}

body {
    margin: 0;
    padding: 0;
    
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1;
    padding: 0px 40px 40px 40px;
}

.main-header, footer {
    min-height: 50px;
    background-color: var(--header-footer-color);
}

footer {
    display: grid;
    grid-template-columns: 1fr minmax(150px, 400px) minmax(150px, 400px) 1fr; /* Outer columns take up remaining space, inner columns have fixed or auto width */
    grid-gap: 10px; /* Adjust the gap between columns as needed */
    align-items: center;
    padding: 10px;
}

.main-header {
    display: flex;
    justify-content: center;
}

/* Adjust styles for smaller screens */
@media screen and (max-width: 600px) {
    body {
        background-color: darkred;
    }
}

/* Adjust styles for medium-sized screens */
@media screen and (min-width: 601px) and (max-width: 1200px) {
    body {
        background-color: darkgreen;
    }

    .about-me {
        float: left;
        margin: 100px 0px;
    }
    
    .about-me-portrait {
        height: 250px;
        float: left;
    }
}

/* Adjust styles for larger screens */
@media screen and (min-width: 901px) {
    body {
        background-color: var(--main-color);
    }

    .about-me {
        margin: 100px 0px;
        display: flex;
        align-items: center;
        justify-content: center;
    }
}

.projects-container {
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
}

.project-info-container {
    padding: 10px;
}

.project-image {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    flex: 1;
}

.project-header {
    display: flex;
    justify-content: space-between;
    align-items: center;

}

.project-header h3 {
    margin: 0;
}

.project-links {
    display: flex;
    gap: 10px;
}

.project-links img {
    max-height: 35px;
    min-height: 25px;
}

.profile-links img, .about-me-links img {
    max-height: 55px;
}

.about-me-links {
    text-align: right;
}

.project {
    min-width: 100px;
    max-width: var(--project-card-width);
    min-height: 100px;
    height: var(--project-card-height);
    background-color: var(--highlight-color);
    border: 1px solid black;
    display: flex;
    flex-direction: column;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
}

.footer-portrait {
    grid-column: 3;
    width: 100%;
}

.footer-text {
    grid-column: 2;
}

.contact-links {
    display: grid;
}

.about-me {
    margin: 50px 0px;
}

.about-me-portrait {
    height: 400px;
}

.about-me-info-container {
    padding: 20px;
    background-color: var(--highlight-color);
    max-width: 1000px;
}

